--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.1",
+    "path": "^0.12.7",
     "sequelize": "^6.28.0"
   }
 }
